# securelens-backend

./: .dockerignore  .env.example  .gitignore  README.md  api_documentation.md  docker-compose.yml  list_models.py  main.py  models.txt  render.yaml  requirements.txt
app/: config.py  database.py  main.py
app/middleware/: auth.py
app/models/: __init__.py  apikey.py  code_scan.py  nuclei_result.py  scan.py  scheduled_scan.py  user.py  webhook.py
app/routers/: __init__.py  apikey.py  auth.py  code_scan.py  health.py  history.py  report.py  scan.py  scheduled_scans.py  webhook.py
app/schemas/: apikey.py  auth.py  code_scan.py  scan.py  webhook.py
app/services/: ai.py  alerting.py  nuclei_scanner.py  scheduler.py  scoring.py  threat_intel.py  webhook_dispatcher.py
app/services/code_scanner/: __init__.py  github_client.py  orchestrator.py
app/services/scanner/: base.py  dns.py  (+6 more)
app/utils/: auth.py  validators.py
ci/: securelens-scan.yml
cli/: README.md  install.sh  pyproject.toml
cli/securelens/: __init__.py  cli.py  config.py  repl.py
cli/securelens/ai/: __init__.py  prompts.py
cli/securelens/output/: __init__.py  exporters.py
cli/securelens/scanners/: __init__.py  web_scanner.py
docs/: README.md  ai-agent.md  api-reference.md  architecture.md
migrations/: env.py
migrations/versions/: a2ca840d767c_initial_migration.py  a8253e561192_add_api_key_model.py
tests/: conftest.py  test_auth.py  test_cookies.py  test_headers.py  test_health.py  test_history.py  test_scan.py  test_scoring.py  test_ssl_checker.py  test_transport.py  test_validators.py
